# mongochain

./: .gitignore  README.md  colab_setup.py  pyproject.toml  test_vector_index.py
examples/: demo_notebook.ipynb  mongochain_colab_demo.ipynb  quickstart.py  single_agent_demo.ipynb
examples/getting_started/: single_agent_demo.ipynb
examples/verticals/banking/: financial_wellness_coach.ipynb  multi-agent_demo.ipynb
examples/verticals/retail/: single_agent_demo.ipynb
mongochain/: __init__.py  agent.py  config.py  embeddings.py  llm.py  memory.py
mongochain/core/: agent.py  config.py  memory_store.py  schemas.py
mongochain/tools/: memory_tools.py
mongochain/utils/: embeddings.py
tests/: test_agent.py  test_memory_store.py
