[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongochain"
version = "0.1.0"
description = "A simple agent framework using MongoDB Atlas as the memory layer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Robin Varghese" }
]
keywords = ["mongodb", "agents", "memory", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pymongo>=4.6.0",
    "voyageai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/robin-mongodb/mongochain"
Documentation = "https://github.com/robin-mongodb/mongochain#readme"
Repository = "https://github.com/robin-mongodb/mongochain"

[tool.hatch.build.targets.wheel]
packages = ["mongochain"]
